fix to footer size on mobile

--- a/app/src/UI/Footer.css
+++ b/app/src/UI/Footer.css
@@ -34,12 +34,4 @@
       }
     }
   }
-
-  /* a{
-    color: #036;
-    text-decoration: none;
-    
-  } */
 }
-
-
