--- a/app/src/UI/Map.css
+++ b/app/src/UI/Map.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 1000px;
+  min-height: 1000px;
   flex-shrink: 0;
 }
 
